<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <View
        android:id="@+id/view_background"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        android:background="@color/color_dialog_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="6dp"
        android:src="@mipmap/ic_close"
        app:layout_constraintTop_toTopOf="@id/view_background"
        app:layout_constraintRight_toRightOf="@id/view_background"/>
    
    <View
        android:id="@+id/view_title_line"
        android:layout_width="0dp"
        android:layout_height="6dp"
        android:background="@color/color_dialog_title_line"
        app:layout_constraintLeft_toLeftOf="@id/tv_title"
        app:layout_constraintRight_toRightOf="@id/tv_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_title"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23.5dp"
        android:text="@string/default_title"
        android:textColor="@color/color_dialog_title"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_background" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tv_title,view_title_line"/>

    <ImageView
        android:id="@+id/iv_title"
        android:layout_width="122dp"
        android:layout_height="122dp"
        android:src="@mipmap/ic_default_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/view_background"
        app:layout_constraintBottom_toTopOf="@id/view_background"/>

    <TextView
        android:id="@+id/tv_primary_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/default_primary_content"
        android:textColor="@color/color_dialog_primary_content"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@id/view_background"
        app:layout_constraintRight_toRightOf="@id/view_background"
        app:layout_constraintTop_toBottomOf="@id/view_title_line"/>

    <TextView
        android:id="@+id/tv_secondary_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/default_secondary_content"
        android:textColor="@color/color_dialog_secondary_content"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@id/view_background"
        app:layout_constraintRight_toRightOf="@id/view_background"
        app:layout_constraintTop_toBottomOf="@id/tv_primary_content"
        app:layout_goneMarginTop="27dp"/>

    <EditText
        android:id="@+id/et_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginTop="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:textColor="@color/color_dialog_input"
        android:textSize="14sp"
        android:hint="@string/default_input_hint"
        android:background="@color/color_dialog_input_background"
        app:layout_constraintLeft_toLeftOf="@id/view_background"
        app:layout_constraintRight_toRightOf="@id/view_background"
        app:layout_constraintTop_toBottomOf="@id/tv_secondary_content"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="118dp"
        android:layout_height="40dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/selector_btn_white"
        android:text="@string/default_cancel"
        android:textColor="@color/color_dialog_cancel"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@id/view_background"
        app:layout_constraintRight_toLeftOf="@id/btn_confirm"
        app:layout_constraintTop_toBottomOf="@id/et_input"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="118dp"
        android:layout_height="40dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/selector_btn_pink"
        android:text="@string/default_confirm"
        android:textColor="@color/color_dialog_confirm"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@id/btn_cancel"
        app:layout_constraintRight_toRightOf="@id/view_background"
        app:layout_constraintTop_toBottomOf="@id/et_input"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="btn_cancel,btn_confirm"/>

    <Button
        android:id="@+id/btn_single_confirm"
        android:layout_width="242dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/selector_btn_pink"
        android:text="@string/default_single_confirm"
        android:textColor="@color/color_dialog_single_confirm"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="@id/view_background"
        app:layout_constraintRight_toRightOf="@id/view_background"
        app:layout_constraintTop_toBottomOf="@id/et_input"
        app:layout_constraintBottom_toBottomOf="@id/view_background"/>
    
</androidx.constraintlayout.widget.ConstraintLayout>